@@ -1,3 +1,10 @@
+2011-11-15  Maxim Kuvyrkov  <maxim@codesourcery.com>
+
+	Backport from mainline:
+
+	2011-11-14  Maxim Kuvyrkov  <maxim@codesourcery.com>
+        * elfxx-mips.c (mips_n64_exe_plt0_entry): Use 64-bit move.
+
 2011-11-15  Alan Modra  <amodra@gmail.com>
 	    Andreas Tobler  <andreast@fgznet.ch>
 
